# EthicalPataphysicsOfAnarchism

./: .gitignore  .pylintrc  AlphabetPaging.txt  FormalProposal.md  FrenchWordThemes.xlsx  Procfile  README.md  bilingual_django.txt  constants.py  package.json  pylint_report.txt  pyproject.toml  requirements.txt  utils.py
Cherokee/: CherokeeResult.html  CherokeeTranslatorOne.html  CherokeeTranslatorTwo.html  baidu.js  baidu.py  package-lock.json  package.json  requirements.txt
RadicalEmpiricism/: .directory  .gitignore  README.md  index.html  package-lock.json  package.json
RadicalEmpiricism/DBScripts/: #OnEtymologySamples.txt#  AlterTablePKs  AlterTablePKs~  Backup of BookDataFile.wbk  Backup of WordDataFile.wbk  BookDataFile.txt~  CleanDatabase  DictionaryDataFile.txt  EtymologyTablesOUT.txt~  MWEtymologySamples.txt  OnEtymologySamples.txt  RevisedDatabaseDesign  (+8 more)
bootstrap-sandbox-finished/: 15-form-validation-display.html
content/: abstract.html  alembert.html  ambisexuality.html  brunschvicg.html  brunscvig.html  combination.html  constellation.html  curvature.html  duality.html  flat.html  genre_set_intro.html  home_and_position.html  hostage.html  intersection.html  membership.html  opposition.html  perspectivism.html  repetition.html  three.html  womb.html
django_backend/: settings.py  urls.py
react_client/: package-lock.json
static/: app.css  main.css  word_counts.json
staticfiles/: staticfiles.json
word_analysis/: context_processors.py  tests.py  urls.py  views.py  word_counts.py  word_quantities.py
zz_not-app/: output.min.json
(+1105 files in other folders)
