[tool.poetry]
name = "Radical Empiricism"
version = "0.1.0"
description = ""
authors = ["mcverter <mitchell.verter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
deep-translator = "^1.11.4"
larousse-api-sunbro = "^0.0.5"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
